<resources>
    <string name="app_name">Gym Tracker</string>
    <string name="meters_display_name">Meters</string>
    <string name="meters_short_form">m</string>
    <string name="kilometers_display_name">Kilometers</string>
    <string name="kilometers_short_form">km</string>
    <string name="miles_display_name">Miles</string>
    <string name="miles_short_form">mi</string>
    <string name="kilograms_display_name">Kilograms</string>
    <string name="kilograms_short_form">kg</string>
    <string name="pounds_display_name">Pounds</string>
    <string name="pounds_short_form">lb</string>
    <string name="create_exercise_title">Create New Exercise</string>
    <string name="create">Create</string>
    <string name="cardio">Cardio</string>
    <string name="weights">Weights</string>
    <string name="calisthenics">Calisthenics</string>
    <string name="cardio_icon">cardio icon</string>
    <string name="exercise_type_toggle">exercise type toggle</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="equipment">Equipment</string>
    <string name="muscle_group">Muscle Group</string>
    <string name="exercise_name_taken">Name already taken</string>
    <string name="seven_days">7 Days</string>
    <string name="thirty_days">30 Days</string>
    <string name="past_year">Past Year</string>
    <string name="all_time">All Time</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="calories">Calories</string>
    <string name="minute_unit">min</string>
    <string name="second_unit">s</string>
    <string name="calories_unit">kcal</string>
    <string name="best_distance">%1$.1f %2$s</string>
    <string name="display_hours">%1$s:%2$s:%3$s</string>
    <string name="display_minutes">%1$s:%2$s</string>
    <string name="display_seconds">%1$s s</string>
    <string name="best_calories">%1$d kcal</string>
    <string name="no_data_error">No data for range</string>
    <string name="best_exercise_icon">best exercise icon</string>
    <string name="exercises_on">Exercises on %1$s</string>
    <string name="workouts_on">Workouts on %1$s</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="delete_exercise_confirm">Do you want to delete this exercise?</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="rest">Rest</string>
    <string name="display_sets">Sets: %1$d</string>
    <string name="display_reps">Reps: %1$d</string>
    <string name="display_weight">Weight: %1$.1f %2$s</string>
    <string name="display_set_reps_info">Set %1$d: %2$d Reps</string>
    <string name="display_set_time_info">Set %1$d: %2$s</string>
    <string name="display_set_rep_weight_info">Set %1$d: %2$d Reps of %3$.1f %4$s</string>
    <string name="display_set_rep_weight_info_singular">Set %1$d: %2$d Rep of %3$.1f %4$s</string>
    <string name="display_set_time_weight_info">Set %1$d: %2$s of %3$.1f %4$s</string>
    <string name="display_rest">Rest time: %1$d s</string>
    <string name="exercise_time">Time: %1$s</string>
    <string name="exercise_distance">Distance: %1$.1f %2$s</string>
    <string name="exercise_calories">Calories: %1$d kcal</string>
    <string name="delete_history">Delete history</string>
    <string name="default_error">Error</string>
    <string name="record_exercise">Record exercise</string>
    <string name="update_exercise">Update Exercise</string>
    <string name="save">Save</string>
    <string name="delete_exercise">Delete %1$s Exercise?</string>
    <string name="muscle_icon">muscle icon</string>
    <string name="equipment_icon">equipment icon</string>
    <string name="calisthenics_icon">calisthenics icon</string>
    <string name="max_weight">Max Weight</string>
    <string name="max_reps">Max Reps</string>
    <string name="max_time">Max Time</string>
    <string name="max_sets">Max Sets</string>
    <string name="total_weight">Total Weight</string>
    <string name="total_reps">Total Reps</string>
    <string name="total_time">Total Time</string>
    <string name="recent_exercise_icon">recent exercise icon</string>
    <string name="units">units</string>
    <string name="new_workout">New %1$s Workout</string>
    <string name="update_workout">Update %1$s Workout</string>
    <string name="my_exercises">My Exercises</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="history">History</string>
    <string name="workouts">Workouts</string>
    <string name="exercises">Exercises</string>
    <string name="home_button">home button</string>
    <string name="back_button">back button</string>
    <string name="edit_feature">edit feature</string>
    <string name="delete_feature">delete feature</string>
    <string name="user_settings">user settings</string>
    <string name="live_record_workout">live record workout</string>
    <string name="user_preferences">User Settings</string>
    <string name="distances">Distances</string>
    <string name="weight">Weight</string>
    <string name="distance_choices">distance choices</string>
    <string name="weight_choices">weight choices</string>
    <string name="highest_single_weight_rep">Highest single weight rep</string>
    <string name="most_weight_per_set">Most weight per set</string>
    <string name="weight_display_toggle">weight display toggle</string>
    <string name="longest_time">Longest Time</string>
    <string name="shortest_time">Shortest Time</string>
    <string name="time_display_toggle">time display toggle</string>
    <string name="change_month">change month</string>
    <string name="previous_year">previous year</string>
    <string name="next_year">next year</string>
    <string name="workout_name">Workout Name</string>
    <string name="workout_exercises">Workout Exercises</string>
    <string name="available_exercises">Available Exercises</string>
    <string name="select_exercise">Select %1$s</string>
    <string name="deselect_exercise">Deselect %1$s</string>
    <string name="add_workout">Add Workout</string>
    <string name="delete_workout">Delete %1$s Workout?</string>
    <string name="edit_exercises">Edit Exercises</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="sets_completed">Sets Completed: %1$d</string>
    <string name="finish_set">Finish Set</string>
    <string name="finish_exercise">Finish Exercise</string>
    <string name="rest_timer">%1$s:%2$s</string>
    <string name="stop">Stop</string>
    <string name="finish_workout">Finish Workout</string>
    <string name="completed">Completed</string>
    <string name="cardio_error">Must have a time, distance or calories entered</string>
    <string name="positive_number_error">Must be a positive number</string>
    <string name="number_error">Must be a number</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="delete_workout_confirm">Do you want to delete this workout?</string>
    <string name="select_record_workout">Select Workout</string>
    <string name="workout_column">workout column</string>
    <string name="create_workout">Create Workout</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="seconds_error">Value must be between 0 and 59</string>
    <string name="weights_exercise_reps">%1$.1f %2$s for %3$s reps</string>
    <string name="weights_exercise_time">%1$.1f %2$s for %3$s</string>
    <string name="calisthenics_exercise_reps">%1$s reps</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date">Date</string>
    <string name="decimal_separator">.</string>
    <string name="home">Home</string>
    <string name="live_record_cancel">Do you want to cancel this workout? All data will be deleted</string>
    <string name="done">Done</string>
    <string name="copy_sets">Copy to all sets</string>
    <string name="seconds_unit">s</string>
    <string name="show_hide_sets">Show/Hide sets</string>
</resources>