...
fun FormInformationFieldWithSuggestionsPreview() {
    GymTrackerTheme(darkTheme = false) {
        FormInformationFieldWithSuggestions(
            label = "Test Field",
            value = TextFieldValue(text = "Bi"),
            onChange = { },
            suggestions = listOf("Biceps", "Bicycle", "Bismuth")
        )
    }
}

@Preview(showBackground = true)
@Composable
...
